force-app/main/default/objects/PWChrono_Job_Requisition__c/fields/Expected_By_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_By_Date__c</fullName>
    <label>Expected By Date</label>
    <type>Date</type>
</CustomField>