force-app/main/default/objects/PWChrono_Job_Requisition__c/fields/Expected_Compensation__c.field-meta.xml
<CustomField>
    <fullName>Expected_Compensation__c</fullName>
    <label>Expected Compensation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>