force-app/main/default/objects/PWChrono_Job_Requisition__c/fields/No_of_Positions__c.field-meta.xml
<CustomField>
    <fullName>No_of_Positions__c</fullName>
    <label>Number of Positions</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>