force-app/main/default/objects/PWChrono_Job_Requisition__c/fields/Reason_for_Hiring__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Hiring__c</fullName>
    <label>Reason for Hiring</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New Position</fullName>
            </value>
            <value>
                <fullName>Replacement</fullName>
            </value>
            <value>
                <fullName>Expansion</fullName>
            </value>
            <value>
                <fullName>Temporary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>