force-app/main/default/objects/PWChrono_Job_Requisition__c/fields/Requested_By__c.field-meta.xml
<CustomField>
    <fullName>Requested_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requested By</label>
    <referenceTo>Portal_Users__c</referenceTo>
    <relationshipLabel>Job Requisitions (Requested By)</relationshipLabel>
    <relationshipName>Job_Requisitions_Requested_By</relationshipName>
    <type>Lookup</type>
</CustomField>