force-app/main/default/objects/PWChrono_Job_Requisition__c/fields/Requested_By_Department__c.field-meta.xml
<CustomField>
    <fullName>Requested_By_Department__c</fullName>
    <label>Requested By Department</label>
    <length>255</length>
    <type>Text</type>
</CustomField>