force-app/main/default/objects/PWChrono_Job_Requisition__c/fields/Staffing_Plan__c.field-meta.xml
<CustomField>
    <fullName>Staffing_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Staffing Plan</label>
    <referenceTo>PWChrono_Staffing_Plan__c</referenceTo>
    <relationshipLabel>Job Requisitions</relationshipLabel>
    <relationshipName>PWChrono_Job_Requisitions</relationshipName>
    <type>Lookup</type>
</CustomField>